Non bug error update. Made sure the first medium version of game works correctly and it is reachable from a main menu at game start. Also started on a hard mode, but i am yet to get shape drop to work correctly so it is not working as of now.

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,20 @@
 
 h1 {
   margin: 20px;
+  max-width: max-content;
+  margin:auto;
+}
+
+.MainMenu {
+  max-width: max-content;
+  margin:auto;
+}
+
+button {
+  padding: 10px;
+  margin: 10px;
+}
+
+.returnButton {
+  margin-top: 200px;
 }
